# commitai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
commitai/: ai_client.py  cli.py  git_ops.py
tests/: test_basic.py
