[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commitai-cli"
version = "0.1.0"
description = "AI-powered git commit messages — Claude, GPT-4, and local Ollama"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "commitai contributors" }]
keywords = ["git", "ai", "commit", "cli", "developer-tools", "anthropic", "openai", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
ollama = ["requests>=2.28"]
all = ["openai>=1.0", "requests>=2.28"]

[project.scripts]
commitai = "commitai.cli:main"

[project.urls]
Homepage = "https://github.com/shlomi2005/commitai"
Repository = "https://github.com/shlomi2005/commitai"
"Bug Tracker" = "https://github.com/shlomi2005/commitai/issues"

[tool.hatch.build.targets.wheel]
packages = ["commitai"]
